# ssg-wild-apricot-tools

./: .fantools  .gitignore  .watools  README.md  pyproject.toml
.cache/: README.md
config/: config.toml  credentials.toml.sample
fantools/: _main.py  account.py  accounts.py  api.py  config.py  contacts.py  events.py  groups.py  membergroups.py  members.py  utils.py  wildapricot-ca.crt  zscaler-root-ca.crt
watools/: __main__.py  api.py  cli.py  config.py  logger.py  old_cli.py  paths.py  utils.py  xxx-groups.py
watools/cli/: _cli.py  cli.py  config.py  logger.py
watools/commands/: account.py  accounts.py  config.py  contacts.py  events.py  membergroups.py
watools/core/: api.py  certs.py  config.py  paths.py  utils.py
