[project]
name = "ssg-wild-apricot-tools"
version = "0.1.0"
description = ""
authors = [
    {name = "John Leonard",email = "john@lowkeylabs.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "tomlkit (>=0.13.2,<0.14.0)"
]

[tool.poetry]
packages = [{ include = "watools" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
watools = "watools.cli.cli:cli"
wat = "watools.cli.cli:cli"

